feat(dwm): Add DWM as a submodule
Signed-off-by: Jason Pena <jasonpena@awkless.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".config/dmenu"]
 	path = .config/dmenu
 	url = https://github.com/rcdevtools/dmenu.git
+[submodule ".config/dwm"]
+	path = .config/dwm
+	url = https://github.com/rcdevtools/dwm.git
