feat(slock): Add patched slock as main locker
Signed-off-by: Jason Pena <jasonpena@awkless.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".config/dwm"]
 	path = .config/dwm
 	url = https://github.com/rcdevtools/dwm.git
+[submodule ".config/slock"]
+	path = .config/slock
+	url = https://github.com/rcdevtools/slock.git
